Fix stretched images in drop view

--- a/frontend/src/styles/drop.scss
+++ b/frontend/src/styles/drop.scss
@@ -8,7 +8,6 @@
   flex-wrap: wrap /* padding: 5px; */;
   display: inline-flex;
   width: 100%;
-  // align-items: center;
   justify-content: center;
 
   .download-renderer {
@@ -24,6 +23,7 @@
   }
 
   img {
+    align-self: center;
     padding: 5px;
     display: block;
     margin-left: auto;
